# Codex

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
codex_operator/: __init__.py  app.py  components.py  state.py  theme.py
docs/: ARCHITECTURE.md  CANON_BOUNDARIES.md  ETHICS.md
src/: codex_cli.py  codex_comparator.py  codex_filter.py  codex_tiekat_engine.py  codex_visualizer.py  typer.py
src/codex/: __init__.py  cli.py  codex_cli.py  codex_comparator.py  codex_filter.py  codex_tiekat_engine.py  codex_visualizer.py  decoder.py  ethics.py  lexicon.py  models.py  renderer.py
src/codex/data/: __init__.py
src/codex/data/patterns/: __init__.py  epsilon_states.json  omega_dynamics.json  scale_invariance.json
src/codex/data/samples/: __init__.py  gospel_of_thomas_full_sample.txt  gospel_of_thomas_sample.txt  hermetic_sample.txt
src/codex/traditions/: __init__.py  gospel_of_thomas.py  hermetic.py
tests/: test_decoder.py  test_lexicon.py  test_renderer.py  test_tiekat_stack.py  test_traditions.py
